// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SteadyBar> renders 1`] = `
<div
  className="segment"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={Object {}}
>
  <Resizable
    className="bar"
    enable={
      Object {
        "right": true,
        "top": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={500}
    minHeight={25}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 190.75,
        "width": 16.666666666666668,
      }
    }
    style={
      Object {
        "backgroundColor": "#00C46A",
      }
    }
  />
</div>
`;

exports[`<SteadyBar> renders with Label when selected and showLabel=true 1`] = `
<div
  className="segment"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "zIndex": 10,
    }
  }
>
  <Label
    interval={
      Object {
        "cadence": 0,
        "id": "mock-id",
        "intensity": 0.763,
        "length": Duration {
          "seconds": 50,
        },
        "pace": 0,
        "type": "steady",
      }
    }
    mode={
      BikeMode {
        "ftp": 250,
        "lengthType": "time",
        "sportType": "bike",
        "weight": 75,
      }
    }
    onCadenceChange={[Function]}
  />
  <Resizable
    className="bar"
    enable={
      Object {
        "right": true,
        "top": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={500}
    minHeight={25}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 190.75,
        "width": 16.666666666666668,
      }
    }
    style={
      Object {
        "backgroundColor": "#00C46A",
      }
    }
  />
</div>
`;

exports[`<SteadyBar> renders without Label when selected, but showLabel=false 1`] = `
<div
  className="segment"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "zIndex": 10,
    }
  }
>
  <Resizable
    className="bar"
    enable={
      Object {
        "right": true,
        "top": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={500}
    minHeight={25}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 190.75,
        "width": 16.666666666666668,
      }
    }
    style={
      Object {
        "backgroundColor": "#00C46A",
      }
    }
  />
</div>
`;
